--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,5 +48,5 @@ jobs:
         run: |
           aws s3 cp \
           --recursive \
-          --region ap-northeast-2
+          --region ap-northeast-2 \
           dist s3://heekng-service-build
