--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,7 +46,4 @@ jobs:
           AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
           AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
         run: |
-          aws s3 cp \
-          --recursive \
-          --region ap-northeast-2 \
-          dist s3://heekng-service-build
+          aws s3 cp --recursive --region ap-northeast-2 dist s3://heekng-service-build
