--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,9 +43,10 @@ jobs:
 
       - name: deploy
         uses: aws-actions/configure-aws-credentials@v1
-        env:
+        with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY }}
+          aws-region: ap-northeast-2
 
       - name: upload to s3
         run: aws s3 cp --region ap-northeast-2 --acl private ./deploy s3://heekng-service-build/
