--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,4 +49,6 @@ jobs:
           aws-region: ap-northeast-2
 
       - name: upload to s3
-        run: aws s3 cp --region ap-northeast-2 --acl private ./deploy s3://heekng-service-build/
+        run: |
+          pwd
+          aws s3 cp --region ap-northeast-2 --acl private --local_dir deploy s3://heekng-service-build/
