--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,4 +52,4 @@ jobs:
         run: |
           pwd
           ls
-          aws s3 cp --region ap-northeast-2 --acl private deploy s3://heekng-service-build/
+          aws s3 cp --region ap-northeast-2 --acl private ./deploy/* s3://heekng-service-build/
