배포 테스트

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,5 +57,5 @@ jobs:
           ls
           aws s3 cp --region ap-northeast-2 --acl private ./deploy/* s3://heekng-service-build/
 
-      - name: CodeDeploy
-        run: aws deploy create-deployment --application-name heekng-service --deployment-group-name heekng-service --s3-location bucket=heekng-service-build,key=aws_with_spring.zip,bundleType=zip
+#      - name: CodeDeploy
+#        run: aws deploy create-deployment --application-name heekng-service --deployment-group-name heekng-service --s3-location bucket=heekng-service-build,key=aws_with_spring.zip,bundleType=zip
