--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,7 +55,7 @@ jobs:
         run: |
           pwd
           ls
-          aws s3 cp --region ap-northeast-2 --acl private ./deploy/* s3://heekng-service-build/
+          aws s3 cp --region ap-northeast-2 --acl private --recursive ./deploy s3://heekng-service-build/
 
-#      - name: CodeDeploy
-#        run: aws deploy create-deployment --application-name heekng-service --deployment-group-name heekng-service --s3-location bucket=heekng-service-build,key=aws_with_spring.zip,bundleType=zip
+      - name: CodeDeploy
+        run: aws deploy create-deployment --application-name heekng-service --deployment-group-name heekng-service --s3-location bucket=heekng-service-build,key=aws_with_spring.zip,bundleType=zip
