--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,9 +36,14 @@ jobs:
 
       - name: before deploy
         run: |
-          zip -r aws_with_spring *
-          mkdir -p deploy
-          mv aws_with_spring.zip deploy/aws_with_spring.zip
+          mkdir -p before-deploy
+          cp scripts/*.sh before-deploy/
+          cp appspec.yml before-deploy/
+          cp build/libs/*.jar before-deploy/
+          cd before-deploy && zip -r before-deploy *
+          cd ../ && mkdir -p deploy
+          mv before-deploy/before-deploy.zip deploy/aws_with_spring.zip
+
         shell: bash
 
       - name: deploy
@@ -47,9 +52,6 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY }}
           aws-region: ap-northeast-2
-
-      - name: Copy appspec
-        run: cp appspec.yml ./deploy
 
       - name: upload to s3
         run: |
