real profile port별 분리

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,3 +3,5 @@ spring:
     group:
       "local": "local"
       "real": "real,real-db"
+      "real1": "real1,real-db"
+      "real2": "real2,real-db"
